Сделал фронтенд для приложения. Вопрос, введеный в поле выводится в консоль по нажатию кнопки и проходит проверку на валидацию.

--- a/src/static/style.css
+++ b/src/static/style.css
@@ -23,7 +23,7 @@ button {
  */
 
 #sidebar {
-    background-color: #E57373;
+    background-color: #006eff;
     padding: 15px;
 }
 
@@ -46,4 +46,8 @@ button {
     #content {
         margin-left: 180px;
     }
+}
+
+.author {
+    font-size: .8rem;
 }
