Реализовал получение вопросов с базы данных. Авторизация работает корректно. есть небольшая проблема с модальным окном (Оно может закрыться после нажатия на нем кнопки)

--- a/src/static/style.css
+++ b/src/static/style.css
@@ -51,3 +51,13 @@ button {
 .author {
     font-size: .8rem;
 }
+
+.floating-btn {
+    position: fixed;
+    bottom: 50px;
+    right: 50px;
+}
+
+.error {
+    color: red;
+}
